# cargo-registry-preview

./: .gitignore  Cargo.toml
cargo-registry-readme/: Cargo.toml  readme.md
cargo-registry-readme-lib/: Cargo.toml  preview.html
cargo-registry-readme-lib/src/: lib.rs
cargo-registry-readme/assets/crates/: tailwind.config.js
cargo-registry-readme/assets/crates/src/: index.html  output.css  ws.js
cargo-registry-readme/src/: main.rs
wireframes/: .htmlhintrc  package-lock.json  package.json
wireframes/crates/: tailwind.config.js
wireframes/crates/src/: index.html  input.css  ws.js
