[package]
name = "cargo-registry-readme-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
cargo-registry-markdown = { path = "../../cargo-registry-markdown" }
opener = "0.5.0"

[dev-dependencies]
anyhow = "1.0.52"

