
[package]
name = "cargo-registry-readme"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
opener = "0.5.0"
cargo-registry-readme-lib = { version = "0.1.0", path = "../cargo-registry-readme-lib" }
clap = { version = "3.0.4", features = ["derive"] }
tiny_http = { version = "0.9.0" }

