
[package]
name = "cargo-markdown"
version = "0.1.0"
edition = "2021"
authors = ["rrrodzilla@protonmail.com"]
description = "Local crates.io readme development server with ultra-fast hot reloading goodness"
readme = "readme.md"

[dependencies]
anyhow = "1.0.52"
opener = "0.5.0"
cargo-registry-markdown = { path = "../../cargo-registry-markdown" }
clap = { version = "3.0.4", features = ["derive"] }
tiny_http = { version = "0.9.0" }
sha1 = "0.6.0"
rustc-serialize = "0.3.24"
hotwatch = "0.4.6"
console = "0.15.0"
ctrlc = { version = "3.2.1", features = ["termination"] }
