
[package]
name = "cargo-markdown"
version = "1.0.3"
edition = "2021"
authors = ["rrrodzilla@protonmail.com"]
description = "Local crates.io readme development server with ultra-fast hot reloading goodness"
repository = "https://github.com/rrrodzilla/cargo-registry-preview"
readme = "readme.md"
license = "MIT OR Apache-2.0"
keywords = ["cli", "readme", "cargo", "subcommand", "mockup"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "development-tools::testing", "development-tools"]
documentation = "https://docs.rs/cargo-markdown/latest/cargo-markdown/"


[dependencies]
anyhow = "1.0.52"
opener = "0.5.0"
clap = { version = "3.0.4", features = ["derive"] }
tiny_http = { version = "0.9.0" }
sha1 = "0.6.0"
rustc-serialize = "0.3.24"
hotwatch = "0.4.6"
console = "0.15.0"
ctrlc = { version = "3.2.1", features = ["termination"] }
cargo-registry-markdown = "0.1.0"
